--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<link rel="stylesheet" href="stylesheets/component.min.css" />
 		<link rel="stylesheet" href="stylesheets/theme.css" />	
-		<script src="http://use.edgefonts.net/alice:n4:all.js"></script>
-
+<script src="http://use.edgefonts.net/alice:n4:all;germania-one:n4:all.js"></script>
 		<!-- JavaScript -->
 		<script src="js/modernizr.min.js"></script>
 
@@ -67,7 +66,7 @@
 		<!-- .Navigation-->
 
 		<!-- Header-->
-		<div class="section bg-light-rose with-photo" id="header">
+		<div class="section bg-black with-photo" id="header">
 
 			<div class="row">
 				<div class="large-12 columns text-center">
@@ -75,11 +74,11 @@
 						<div class="hero-logo">
 							<img src="images/logo/logo.png" alt="" /><!-- logo -->
 						</div>
-						<div class="hero-headline">
-							<h1>LINGO'S MARKET</h1><!-- title -->
+						<!--<div class="hero-headline"><-->
+							<h1 class="lingo-name">LINGO'S MARKET</h1><!-- title -->
 							<p>Rehoboth Beach's Original Lingo's Market! <BR> 
 Serving the area for over 100 years</p>
-						</div>
+						<!--</div><-->
 	<!--store link-->					
 <div class="row">
     <div class="small-6 small-centered columns glance">
