--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<link rel="stylesheet" href="stylesheets/component.min.css" />
 		<link rel="stylesheet" href="stylesheets/theme.css" />	
-<script src="http://use.edgefonts.net/alice:n4:all;germania-one:n4:all.js"></script>
-		<!-- JavaScript -->
+<script src="http://use.edgefonts.net/alice:n4:all;french-canon:n4,i4:all;germania-one:n4:all.js"></script>	<!-- JavaScript -->
 		<script src="js/modernizr.min.js"></script>
 
 		
@@ -56,7 +55,7 @@
 						  	<li><a href="#header">Home</a></li>
 						  	<li><a href="#overview">Who We Are</a></li>
 						  	<li><a href="#our-team">Our Specialities</a></li>
-						  	<li><a href="#portfolio">Work</a></li>
+						  	<li><a href="#portfolio">What We Carry</a></li>
 						  	<li><a href="#contact">Contact</a></li>
 						</ul>
 				  </section><!-- .menu -->
@@ -72,12 +71,13 @@
 				<div class="large-12 columns text-center">
 					<div class="hero-header">
 						<div class="hero-logo">
-							<img src="images/logo/logo.png" alt="" /><!-- logo -->
+							<!-- LOGO <img src="images/logo/logo.png" alt="" />-->
 						</div>
 						<!--<div class="hero-headline"><-->
-							<h1 class="lingo-name">LINGO'S MARKET</h1><!-- title -->
-							<p>Rehoboth Beach's Original Lingo's Market! <BR> 
-Serving the area for over 100 years</p>
+							<h1 class="show-for-medium-up lingo-nameMD">LINGO'S MARKET</h1>
+							<h1 class="show-for-small-only lingo-nameSM">LINGO'S MARKET</h1><!-- title -->
+							<h4 class="title_sub">Rehoboth Beach's Original Lingo's Market! <BR> 
+Serving the area for over 100 years</h4>
 						<!--</div><-->
 	<!--store link-->					
 <div class="row">
@@ -101,19 +101,21 @@ Serving the area for over 100 years</p>
 			<div class="row">
 				<div class="large-12 columns text-center">
 					<div class="section-title">
-						<h2>Who We Are</h2>
+						<h2 class="lingo-section-title">Who We Are</h2>
 					</div>
-					<div class="section-description">
-						<h3>Lingo's Market.</h3>
-						<p><small>We specialize in offering a wide variety of meat, seafood, deli, produce, bakery, groceries, dairy, frozen food, ice cream, health and beauty items, without the hassle of the big box stores.  We are locally owned, and have proudly served our community for over 100 years.</small></p>
+					<!--<div class="section-description">
+						<h3>Lingo's Market.</h3>-->
+						<div class="section-content">
+                            <h5><large>Lingo's Market is a locally owned food market with an authentic French bakery. We specialize in offering a wide variety of groceries, meat, seafood, deli, produce, bakery, dairy, frozen food, ice cream, health and beauty items. Our store is a one-stop shop without the hassle of the big box stores.  We have proudly served our community for over 100 years.</large></h5></div>
 					</div>
 				</div>
             </div></div>
        <div class= "section bg-white with-photo">
 			<div class="row">
-				<div class="large-12 columns">
-				<h3 class="location-description">Where We Are</h3>
-							<p>We are located in the Village By The Sea shopping complex, conviently located directly off Rehoboth Ave.</p>
+				<div class="large-12 columns text-center">
+                    <div class="section-title"><h2> Where We Are</h2></div>
+							<div class="section-content">
+							<h5>We are located in the Village By The Sea shopping complex, conviently located directly off Rehoboth Ave between 1st and 2nd street.</h5></div>
 					<ul class="medium-block-grid-2 small-block-grid-1 text-center">
 						<li><!-- service description -->
 							<div class="">
@@ -503,11 +505,12 @@ Serving the area for over 100 years</p>
 			<div class="row">
 				<div class="large-12 columns text-center">
 					<div class="section-title">
-						<h2>Clients</h2>
+						<h2>What We Carry</h2>
 					</div>
 					<div class="section-description">
-						<h3>Cras ultrices scelerisque tempus.</h3>
-						<p><small>Nunc ipsum elit, adipiscing adipiscing mollis nec, luctus ut quam. Quisque commodo sit amet felis quis bibendum.</small></p>
+					<div class="section-content">
+						<h5>This is a sample of the brands you will find in our market </h5>
+                        <p><small></small></p></div>
 					</div>
 				</div>
 			</div>
