--- a/index.html
+++ b/index.html
@@ -635,13 +635,12 @@ Serving the area for over 100 years</h4>
 		</div>
 		<!-- .Contact -->
 
-		<!-- Map -->
+		<!-- not used Map section 
 		<div class="section section-collapse" id="map">
 
-			<div id="google-map" class="map"></div><!-- google map -->
-
+			<div id="google-map" class="map"></div>
 		</div>
-		<!-- .Map -->
+		.Map -->
 
 		<!-- Footer -->
 		<div class="section" id="footer">
@@ -658,7 +657,7 @@ Serving the area for over 100 years</h4>
 
 			<div class="row text-center">
 				<div class="large-12 columns text-center">
-					<p class="footer-copy">&copy; 2014 Leela</p>
+					<p class="footer-copy">&copy; 2016 Lingo's Market</p>
 				</div>
 			</div>
 
