--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 					    <ul>
 						  	<li><a href="#header">Home</a></li>
 						  	<li><a href="#overview">Who We Are</a></li>
-						  	<li><a href="#our-team">Our Specialities</a></li>
-						  	<li><a href="#portfolio">What We Carry</a></li>
-						  	<li><a href="#contact">Contact</a></li>
+						  	<li><a href="#our-team">Specialities</a></li>
+						  	<li><a href="#portfolio">Products</a></li>
 						</ul>
 				  </section><!-- .menu -->
 				</nav>
