--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<link rel="stylesheet" href="stylesheets/app.css" />
 		<link rel="stylesheet" href="stylesheets/component.min.css" />
 		<link rel="stylesheet" href="stylesheets/theme.css" />	
-<script src="http://use.edgefonts.net/alice:n4:all;french-canon:n4,i4:all;germania-one:n4:all.js"></script>	<!-- JavaScript -->
+<script src="http://use.edgefonts.net/alice:n4:all;french-canon:n4,i4:all;overlock:n4,i4,n7,i7,n9,i9:all;germania-one:n4:all.js"></script>	<!-- JavaScript -->
 		<script src="js/modernizr.min.js"></script>
 
 		
@@ -112,7 +112,7 @@ Serving the area for over 100 years</h4>
        <div class= "section bg-white with-photo">
 			<div class="row">
 				<div class="large-12 columns text-center">
-                    <div class="section-title"><h2> Where We Are</h2></div>
+                    <div class="section-title"><h2>Where We Are</h2></div>
 							<div class="section-content">
 							<h5>We are located in the Village By The Sea shopping complex, conviently located directly off Rehoboth Ave between 1st and 2nd street.</h5></div>
 					<ul class="medium-block-grid-2 small-block-grid-1 text-center">
@@ -197,109 +197,109 @@ Serving the area for over 100 years</h4>
 				<div class="large-12 columns">
 					<ul class="large-block-grid-3 medium-block-grid-3 small-block-grid-2 grid effect-3" id="grid">
 						<li><!-- specialities grid item -->
-							<a href="#" class="project-item" data-project-id="bakery">
+							<div class="project-item" data-project-id="bakery">
 								<img src="images/work-grid/lingo_past440.jpg" alt="" />
 								<div class="project-tease text-center">
 									<div class="project-tease-content">
 										<h4>Authentic French Bakery</h4>
 										<p>Best Bakery on the Beach</p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="meats">
+							<div class="project-item" data-project-id="meats">
 								<img src="images/work-grid/steaks440.jpg" alt="" />
 								<div class="project-tease text-center">
 									<div class="project-tease-content">
 										<h4>Quality Meats</h4>
 										<p>Full Line of Top Quality Meats</p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="cheeses">
+							<div class="project-item" data-project-id="cheeses">
 								<img src="images/work-grid/cheeses440.jpg" alt="" />
 								<div class="project-tease text-center">
 									<div class="project-tease-content">
 										<h4>Speciality Cheese</h4>
 										<p>Exquisite Selection of Exotic Cheeses </p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="deli">
+							<div class="project-item" data-project-id="deli">
 								<img src="images/work-grid/deli440.jpg" alt="" />
 								<div class="project-tease text-center">
 									<div class="project-tease-content">
 										<h4>French Delicatessen</h4>
 										<p>Full Service French Delicatessen With Grab And Go Selections</p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="seafood">
+							<div class="project-item" data-project-id="seafood">
 								<img src="images/work-grid/seafood440.jpg" alt="" />
 								<div class="project-tease text-center">
 									<div class="project-tease-content">
 										<h4>Fresh Seafood</h4>
 										<p>Display of Daily Selected Fresh Seafood</p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="produce">
+							<div class="project-item" data-project-id="produce">
 								<img src="images/work-grid/produce2440.jpg" alt="" />
 								<div class="project-tease text-center">
 									<div class="project-tease-content">
 										<h4>Fresh Produce</h4>
 										<p>Full Produce Section with Local and Organic Selections</p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="chicken">
+							<div class="project-item" data-project-id="chicken">
 								<img src="images/work-grid/chicken2440.jpg" alt="" />
 								<div class="project-tease text-center">
 									<div class="project-tease-content">
 										<h4>Rotisserie Chicken</h4>
 										<p>Our Freshly Rotiessieried Chicken is a Rehobath Beach Favorite </p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="speciality">
+							<div class="project-item" data-project-id="speciality">
 								<img src="images/work-grid/speciality440.jpg" alt="" />
 								<div class="project-tease pinned text-center">
 									<div class="project-tease-content">
 										<h4>Speciality Items</h4>
 										<p>We Probably Have Any Ingredient You Could Need</p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
 						</li><!-- .portfolio grid item -->
 						<li><!-- portfolio grid item -->
-							<a href="#" class="project-item" data-project-id="kitchen">
+							<div class="project-item" data-project-id="kitchen">
 								<img src="images/work-grid/work_grid.png" alt="" />
 								<div class="project-tease pinned text-center">
 									<div class="project-tease-content">
 										<h4>Kitchen Items</h4>
 										<p>Full Selection of General Kitchen Items</p>
-										<i class="fa fa-chevron-down"></i>
+										<!--<i class="fa fa-chevron-down"></i>-->
 									</div>
 								</div>
 							</a>
@@ -312,7 +312,7 @@ Serving the area for over 100 years</h4>
 		</div>
 		<!-- .Portfolio -->
 
-		<!-- Project 1 -->
+		<!-- Project 1
 		<div class="section bg-gray project" id="project-1">
 
 			<div class="row">
@@ -325,7 +325,7 @@ Serving the area for over 100 years</h4>
 					</div>
 				</div>
 			</div>
-			<div class="row"><!-- project description -->
+			<div class="row"><!-- project description
 				<div class="large-12 columns">
 					<p>Quisque lacinia nisl nec ultrices imperdiet. Nunc facilisis ut odio ac congue. Nam dolor quam, ornare vel aliquam nec, aliquam sed ligula. Ut et fringilla libero, faucibus aliquet neque. Fusce nibh urna, lacinia quis placerat at, placerat nec odio. Suspendisse porttitor, risus at accumsan ultricies, mi lorem accumsan tortor, non egestas dui dolor nec nibh. Etiam vehicula, metus vel pulvinar gravida, ligula augue egestas metus, nec imperdiet diam nisl at diam. Sed consectetur tortor ut tempus vestibulum. Maecenas enim lectus, posuere eget massa non, posuere semper augue. Vestibulum vitae diam id libero rutrum malesuada. Suspendisse justo libero, semper sed condimentum eget, varius vel magna. Etiam nunc lorem, blandit quis sem id, condimentum ornare odio. Mauris sed turpis eu risus tristique auctor ornare ultricies ipsum. Cras mattis elit sapien, non hendrerit quam pretium eget.</p>
 					<p>Morbi pretium pulvinar ligula quis tincidunt. Etiam eget viverra est. Pellentesque auctor urna id magna blandit, nec dapibus nunc convallis. Sed sed dolor rhoncus, sollicitudin lectus in, pellentesque nisi. Aliquam quis elit id justo congue cursus vel vitae sapien. Aliquam lobortis tempus commodo. Ut commodo accumsan blandit. Maecenas lobortis lobortis sapien, id malesuada tellus convallis nec.</p>
@@ -333,7 +333,7 @@ Serving the area for over 100 years</h4>
 						<img src="images/work-one/work_one.png" alt="" />
 					</p>
 				</div>
-			</div><!-- .project description -->
+			</div><!-- .project description
 
 			<a href="#" class="project-close">
 				<i class="fa fa-times-circle-o"></i>
@@ -342,7 +342,7 @@ Serving the area for over 100 years</h4>
 		</div>
 		<!-- .Project 1 -->
 
-		<!-- Project 2 -->
+		<!-- Project 2
 		<div class="section bg-gray project" id="project-2">
 
 			<div class="row">
@@ -355,7 +355,7 @@ Serving the area for over 100 years</h4>
 					</div>
 				</div>
 			</div>
-			<div class="row"><!-- project description -->
+			<div class="row"><!-- project description
 				<div class="large-12 columns">
 					<p>Sed varius, odio sed tempus vulputate, neque eros porttitor leo, vitae pellentesque nulla eros sed nibh. Proin aliquam est sit amet feugiat varius. Nullam venenatis in ipsum ac suscipit. In consequat ante tincidunt nisl semper, id varius ligula iaculis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis a odio aliquam justo hendrerit eleifend. Donec lacinia, quam interdum rutrum euismod, mauris velit imperdiet mauris, quis fringilla quam magna vitae tellus. In id nisi ac risus dictum vulputate id at lorem. Etiam et libero id justo posuere faucibus. Morbi nec sem vel ante ornare bibendum. Nam eros libero, commodo et convallis eu, lobortis iaculis eros. Aenean posuere purus vitae mattis laoreet.</p>
 					<p>Maecenas semper elit non diam volutpat tristique. Ut tortor velit, feugiat sed leo ultricies, volutpat venenatis tellus. Ut vulputate mattis eros, sit amet posuere sapien mollis et. Nam gravida posuere enim et molestie. Praesent ut elit in nibh molestie vehicula a ac turpis. Aliquam porta pulvinar sapien vel aliquam. Duis vitae risus est. Sed dictum purus eu ultricies blandit. Maecenas vitae augue tortor. Suspendisse vel ullamcorper ante, ut facilisis tellus. Ut lobortis porttitor molestie. Nunc feugiat ornare ligula, in accumsan nulla accumsan a. Nulla facilisis nulla sit amet tristique viverra. Donec non leo in neque molestie pretium.</p>
@@ -363,7 +363,7 @@ Serving the area for over 100 years</h4>
 						<img src="images/work-one/work_one.png" alt="" />
 					</p>
 				</div>
-			</div><!-- .project description -->
+			</div><!-- .project description
 
 			<a href="#" class="project-close">
 				<i class="fa fa-times-circle-o"></i>
@@ -392,7 +392,7 @@ Serving the area for over 100 years</h4>
 		</div>
 		<!-- .Testimonials-->
 
-		<!-- One More-->
+		<!-- One More
 		<div class="section bg-purple" id="one-more">
 
 			<div class="row">
@@ -412,93 +412,11 @@ Serving the area for over 100 years</h4>
 			</div>
 
 		</div>
-		<!-- .One More-->
+		One More-->
 
-		<!-- Clients-->
-		<div class="section bg-purple with-photo" id="clients">
-
-			<div class="row">
-				<div class="large-12 columns text-center">
-					<div class="section-title">
-						<h2>What We Carry</h2>
-					</div>
-					<div class="section-description">
-					<div class="section-content">
-						<h5>This is a sample of the brands you will find in our market </h5>
-                        <p><small></small></p></div>
-					</div>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="large-12 columns orbit-alternate">
-					<ul class="clients orbit text-center" data-options="animation: slide; animation_speed: 1000;" data-orbit>
-					  	<li>
-				    		<ul class="large-block-grid-3 medium-block-grid-3 small-block-grid-1 text-center">
-								<li><!-- client -->
-									<div class="overview-feature-image">
-										<img src="images/logos-clients/logo_client.png" width="96" height="96" alt="" />
-									</div>
-									<div class="client-name">
-										OmniCorp
-									</div>
-								</li><!-- .client -->
-								<li><!-- client -->
-									<div class="overview-feature-image">
-										<img src="images/logos-clients/logo_client.png" width="96" height="96" alt="" />
-									</div>
-									<div class="client-name">
-										Weyland-Yutani
-									</div>
-								</li><!-- .client -->
-								<li><!-- client -->
-									<div class="overview-feature-image">
-										<img src="images/logos-clients/logo_client.png" width="96" height="96" alt="" />
-									</div>
-									<div class="client-name">
-										Cyberdyne Systems
-									</div>
-								</li><!-- .client -->
-							</ul>
-					  	</li>
-					  	<li>
-					     	<ul class="large-block-grid-3 medium-block-grid-3 small-block-grid-1 text-center">
-								<li><!-- client -->
-									<div class="overview-feature-image">
-										<img src="images/logos-clients/logo_client.png" width="96" height="96" alt="" />
-									</div>
-									<div class="client-name">
-										Planet Express
-									</div>
-								</li><!-- .client -->
-								<li><!-- client -->
-									<div class="overview-feature-image">
-										<img src="images/logos-clients/logo_client.png" width="96" height="96" alt="" />
-									</div>
-									<div class="client-name">
-										Applied Cryogenics
-									</div>
-								</li><!-- .client -->
-								<li><!-- client -->
-									<div class="overview-feature-image">
-										<img src="images/logos-clients/logo_client.png" width="96" height="96" alt="" />
-									</div>
-									<div class="client-name">
-										MomCorp
-									</div>
-								</li><!-- .client -->
-							</ul>
-					  	</li>
-					</ul>
-					
-				</div>
-			</div>
-
-		</div>
-		<!-- .Clients-->
-
+	
 		<!-- Contact -->
-		<div class="section bg-dark-blue" id="contact">
+		<div class="section bg-purple with-photo" id="contact">
 			
 			<div class="row">
 				<div class="large-12 columns text-center">
