--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@ Serving the area for over 100 years</h4>
 			<div class="row">
 				<div class="large-12 columns text-center">
 					<div class="footer-social">
-						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-facebook"></i></a>
-						<a href="#"><i class="fa fa-instagram"></i></a>
+						<!--<a href="#"><i class="fa fa-twitter"></i></a>-->
+						<a href="https://www.facebook.com/Lingos-Market-298686543595394/" target="_blank"><i class="fa fa-facebook"></i></a>
+						<!--<a href="#"><i class="fa fa-instagram"></i></a>-->
 					</div>
 				</div>
 			</div>
