--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 		<!-- .Navigation-->
 
  <div id="myModal" class="reveal-modal" data-reveal>
-  <h2>We Are Hiring for Summer 2016!!!</h2>
-  <p class="lead">We are currently taking applications for Summer 2016</p> <a href="mailto:Curt'sEmail?Subject=Contact" target="_top">CLICK HERE to send us an email for more information on our current job openings.</a>
+  <h2 class="text-center hiring-header">We Are Hiring for Summer 2016!!!</h2>
+  <div class= "text-center"> <a class=" hiring-link" href="mailto:Curt'sEmail?Subject=Job Openings" target="_top">CLICK HERE to send us an email for more information on our current job openings.</a></div>
   <a class="close-reveal-modal">&#215;</a>
 </div>
     
