--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 						<!--<div class="hero-headline"><-->
 							<h1 class="show-for-medium-up lingo-nameMD">LINGO'S MARKET</h1>
 							<h1 class="show-for-small-only lingo-nameSM">LINGO'S MARKET</h1><!-- title -->
-							<h4 class="title_sub">Rehoboth Beach's Original Lingo's Market! <BR> 
+							<h4 class="title_sub">Rehoboth Beach's original Lingo's Market! <BR> 
 Serving the area for over 100 years</h4>
 						<!--</div><-->
 	<!--store link-->					
 <div class="row">
     <div class="small-6 small-centered columns glance">
-        <a href="http://order.ehungry.com/lingosmarket" target="_blank" class="expand button quickLink">ORDER FOOD NOW!!</a>
+        <a href="http://order.ehungry.com/lingosmarket" target="_blank" class="expand button quickLink">ORDER FOOD NOW</a>
     </div>	</div>
                     <!-- Link ended-->					
 						<div class="hero-scroll">
@@ -120,7 +120,7 @@ Serving the area for over 100 years</h4>
 				<div class="large-12 columns text-center">
                     <div class="section-title"><h2>Where We Are</h2></div>
 							<div class="section-content">
-							<h5>We are located in the Village By The Sea shopping complex, conviently located directly off Rehoboth Ave between 1st and 2nd street.</h5></div>
+							<h5>We are located in the Village By The Sea shopping complex conviently located directly off Rehoboth Ave between 1st and 2nd street.</h5></div>
 					<ul class="medium-block-grid-2 small-block-grid-1 text-center">
 						<li><!-- service description -->
 							<div class="">
