--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 		
 	</head>
 	<body>
+   
 
 		<!-- Navigation-->
 		<div class="section section-collapse" id="navigation">
-
 				<nav class="top-bar" id="top-bar" data-topbar>
 				  	<ul class="title-area">
 				    	<li class="name">
@@ -53,9 +53,9 @@
 				  	<section class="top-bar-section" id="menu"><!-- menu -->
 					    <ul>
 						  	<li><a href="#header">Home</a></li>
-						  	<li><a href="#overview">Who We Are</a></li>
+						  	<li><a href="#overview">Find Us</a></li>
 						  	<li><a href="#our-team">Specialities</a></li>
-						  	<li><a href="#portfolio">Products</a></li>
+						  	<li><a href="#contact">Contact Us</a></li>
 						</ul>
 				  </section><!-- .menu -->
 				</nav>
@@ -81,7 +81,7 @@
 						<!--<div class="hero-headline"><-->
 							<h1 class="show-for-medium-up lingo-nameMD">LINGO'S MARKET</h1>
 							<h1 class="show-for-small-only lingo-nameSM">LINGO'S MARKET</h1><!-- title -->
-							<h4 class="title_sub">Rehoboth Beach's original Lingo's Market! <BR> 
+							<h4 class="title_sub">Rehoboth Beach's original Lingo's Market! We are your one-stop grocery, bakery, &amp; deli. <BR> 
 Serving the area for over 100 years</h4>
 						<!--</div><-->
 	<!--store link-->					
@@ -101,7 +101,7 @@ Serving the area for over 100 years</h4>
 		<!-- .Header -->
 
 		<!-- Overview -->
-		<div class="section bg-white" id="overview">
+		<div class="section bg-white" >
 
 			<div class="row">
 				<div class="large-12 columns text-center">
@@ -115,7 +115,7 @@ Serving the area for over 100 years</h4>
 					</div>
 				</div>
             </div></div>
-       <div class= "section bg-white with-photo">
+       <div class= "section bg-white with-photo" id="overview">
 			<div class="row">
 				<div class="large-12 columns text-center">
                     <div class="section-title"><h2>Where We Are</h2></div>
@@ -186,7 +186,7 @@ Serving the area for over 100 years</h4>
 		Out Team -->
 
 		<!-- speciality items -->
-		<div class="section bg-dark-blue" id="portfolio">
+		<div class="section bg-dark-blue" id="our-team">
 
 			<div class="row">
 				<div class="large-12 columns text-center">
@@ -433,11 +433,10 @@ Serving the area for over 100 years</h4>
                        <div class="large-4 small-6 small-centered large-uncentered columns text-center">
                             <h2>CALL</h2>
                             <img class="contact_phone" src="images/contact/technology.svg">
-<<<<<<< HEAD
-                            <h4>You can reach us at (302) 227-7072 <br/> 7AM - 7PM 7 Days a Week Between Memorial Day Weekend and Labor Day Weekend.</h4>
-=======
-                            <h4>You can reach us at (302) 227-7072 <br/> 7AM - 8PM Sun-Fri & 7AM - 9PM Sat Between Memorial Day Weekend and Labor Day Weekend.</h4>
->>>>>>> origin/master
+
+                            
+                            <h4>You can reach us at (302) 227-7072 <br/> 7AM - 8PM Sun-Fri &amp; 7AM - 9PM Sat Between Memorial Day Weekend and Labor Day Weekend.</h4>
+
 
                        </div>
                        <div class="small-12 column hide-for-large-up extraspace"></div>
@@ -522,6 +521,7 @@ Serving the area for over 100 years</h4>
 
 			<div class="row text-center">
 				<div class="large-12 columns text-center">
+				    <p class="footer-address">Address: 149 Rehobath Ave | Rehobath Beach, DE 19971 <br/>Telephone: (302) 227-7072</p>
 					<p class="footer-copy">&copy; 2016 Lingo's Market</p>
 				</div>
 			</div>
