--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ Serving the area for over 100 years</h4>
                         <div class="large-4 small-6 small-centered large-uncentered columns text-center">
                             <h2>EMAIL</h2>
                             <a href="mailto:curt@gesupport.net?Subject=Contact" target="_top"> <img class="contact_email" src="images/contact/black.svg"></a>
-                            <h4>Our directors may be directly contacted via email. <br /><a class="send_link" href="mailto:Curt'sEmail?Subject=Contact" target="_top"><span>Send An Email</span></a></h4>
+                            <h4>Our directors may be directly contacted via email. <br /><a class="send_link" href="mailto:curt@gesupport.net?Subject=Contact" target="_top"><span>Send An Email</span></a></h4>
 
                        </div>
                        <div class="small-12 column hide-for-large-up extraspace"></div>
