--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
 		</div>
 		<!-- .Navigation-->
-
+<!--
  <div id="myModal" class="reveal-modal" data-reveal>
   <h2 class="text-center hiring-header">We Are Hiring for Summer 2016!!!</h2>
   <div class= "text-center"> <a class=" hiring-link" href="mailto:curt@gesupport.net?Subject=Job Openings" target="_top">CLICK HERE to send us an email for more information on our current job openings.</a></div>
   <a class="close-reveal-modal">&#215;</a>
-</div>
+</div>-->
     
 		<!-- Header-->
 		<div class="section bg-black with-photo" id="header">
@@ -84,11 +84,11 @@
 							<h4 class="title_sub">Rehoboth Beach's original Lingo's Market! We are your one-stop grocery, bakery, &amp; deli. <BR> 
 Serving the area for over 100 years</h4>
 						<!--</div><-->
-	<!--store link-->					
+	<!--store link				
 <div class="row">
     <div class="small-6 small-centered columns glance">
         <a href="http://order.ehungry.com/lingosmarket" target="_blank" class="expand button quickLink">ORDER FOOD NOW</a>
-    </div>	</div>
+    </div>	</div>-->
                     <!-- Link ended-->					
 						<div class="hero-scroll">
 							<a href="#overview" id="scroll"><i class="fa fa-chevron-down"></i></a>
